==> wonkodv/beescale-stm32f030/lora.c <==
#include "gpio.h"
#include "lora.h"
#include "assert.h"
#define REG_FIFO                       0x00
#define REG_OP_MODE                    0x01
#define REG_FRF_MSB                    0x06
#define REG_FRF_MID                    0x07
#define REG_FRF_LSB                    0x08
#define REG_PA_CONFIG                  0x09
#define REG_LNA                        0x0c
#define REG_FIFO_ADDR_PTR              0x0d
#define REG_FIFO_TX_BASE_ADDR          0x0e
#define REG_FIFO_RX_BASE_ADDR          0x0f
#define REG_FIFO_RX_CURRENT_ADDR       0x10
#define REG_IRQ_FLAGS_MASK             0x11
#define REG_IRQ_FLAGS                  0x12
#define REG_RX_NB_BYTES                0x13
#define REG_PKT_SNR_VALUE              0x19
#define REG_PKT_RSSI_VALUE             0x1a
#define REG_MODEM_CONFIG_1             0x1d
#define REG_MODEM_CONFIG_2             0x1e
#define REG_PREAMBLE_MSB               0x20
#define REG_PREAMBLE_LSB               0x21
#define REG_PAYLOAD_LENGTH             0x22
#define REG_MODEM_CONFIG_3             0x26
#define REG_RSSI_WIDEBAND              0x2c
#define REG_DETECTION_OPTIMIZE         0x31
#define REG_DETECTION_THRESHOLD        0x37
#define REG_SYNC_WORD                  0x39
#define REG_DIO_MAPPING_1              0x40
#define REG_VERSION                    0x42
#define MODE_LORA                      0x80
#define MODE_LOW_FREQ                  0x08
#define MODE_SLEEP                     0x00
#define MODE_STDBY                     0x01

static void lora_write_reg(uint8_t reg, uint8_t val) {
    assert_comp(reg & 0x7F, ==, reg);
    spi_tx(reg|0x80, &val, 1);
}

static uint8_t lora_read_reg(uint8_t reg) {
    assert_comp(reg & 0x7F, ==, reg);
    uint8_t val;
    spi_tx(reg, &val, 1);
    return val;
}

void lora_reset(void) {
    lora_down();
    HAL_Delay(1);
    lora_up();
    HAL_Delay(10);
}

void lora_send_packet(void *buf, uint8_t size) {
    int i;

    uint8_t *pbuf = (uint8_t*)buf;

    /*
     * Transfer data to radio.
     */
    lora_write_reg(REG_OP_MODE, MODE_LORA | MODE_STDBY);
    lora_write_reg(REG_FIFO_ADDR_PTR, 0);

    for(i=0; i<size; i++) {
        lora_write_reg(REG_FIFO, *pbuf++);  /* TODO: use only 1 SPI Transmit*/
    }

    lora_write_reg(REG_PAYLOAD_LENGTH, size);

    /*
     * Start transmission and wait for conclusion.
     */
    lora_write_reg(REG_OP_MODE, MODE_LORA | MODE_TX);
    while((lora_read_reg(REG_IRQ_FLAGS) & IRQ_TX_DONE_MASK) == 0) {
        HAL_Delay(1);
    }

    lora_write_reg(REG_IRQ_FLAGS, IRQ_TX_DONE_MASK);
}

int16_t lora_receive_packet(void *buf, uint8_t size) {
    int i, len = 0;

    uint8_t *pbuf = (uint8_t*)buf;

    /*
     * Check interrupts.
     */
    int irq = lora_read_reg(REG_IRQ_FLAGS);
    lora_write_reg(REG_IRQ_FLAGS, irq);

    if((irq & IRQ_RX_DONE_MASK) == 0) {
        return LORA_ERR_NO_PACKET;
    }

    if(irq & IRQ_PAYLOAD_CRC_ERROR_MASK) {
        return LORA_ERR_CRC_ERR;
    }

    /*
     * Find packet size.
     */
    lora_write_reg(REG_OP_MODE, MODE_LORA | MODE_STDBY);
    if (implicit_header_mode) {
        len = lora_read_reg(REG_PAYLOAD_LENGTH);
    } else {
        len = lora_read_reg(REG_RX_NB_BYTES);
    }

    /*
     * Transfer data from radio.
     */
    lora_write_reg(REG_FIFO_ADDR_PTR, lora_read_reg(REG_FIFO_RX_CURRENT_ADDR));
    if(len > size) {
        len = size;
    }
    for(i=0; i<len; i++) {
        *pbuf++ = lora_read_reg(REG_FIFO); /* TODO: use only 1 SPI Transfer */
    }
    return len;
}

void lora_set_bandwidth(uint8_t bw) {
    assert_comp(bw, <=, LORA_BW_MAX);
    lora_write_reg(REG_MODEM_CONFIG_1, (lora_read_reg(REG_MODEM_CONFIG_1) & 0x0f) | (bw << 4));
}
