==> Superberti/wetterstation/components/lora/lora.c <==
#include "freertos/FreeRTOS.h"
#include "freertos/task.h"
#include "esp_system.h"
#include "driver/spi_master.h"
#include "soc/gpio_struct.h"
#include "driver/gpio.h"
#include <string.h>
#define CONFIG_CS_GPIO 18
#define CONFIG_RST_GPIO 14
#define CONFIG_MISO_GPIO 19
#define CONFIG_MOSI_GPIO 27
#define CONFIG_SCK_GPIO 5
#define REG_FIFO 0x00
#define REG_OP_MODE 0x01
#define REG_FRF_MSB 0x06
#define REG_FRF_MID 0x07
#define REG_FRF_LSB 0x08
#define REG_PA_CONFIG 0x09
#define REG_LNA 0x0c
#define REG_FIFO_ADDR_PTR 0x0d
#define REG_FIFO_TX_BASE_ADDR 0x0e
#define REG_FIFO_RX_BASE_ADDR 0x0f
#define REG_FIFO_RX_CURRENT_ADDR 0x10
#define REG_IRQ_FLAGS 0x12
#define REG_RX_NB_BYTES 0x13
#define REG_PKT_SNR_VALUE 0x19
#define REG_PKT_RSSI_VALUE 0x1a
#define REG_MODEM_CONFIG_1 0x1d
#define REG_MODEM_CONFIG_2 0x1e
#define REG_PREAMBLE_MSB 0x20
#define REG_PREAMBLE_LSB 0x21
#define REG_PAYLOAD_LENGTH 0x22
#define REG_MODEM_CONFIG_3 0x26
#define REG_RSSI_WIDEBAND 0x2c
#define REG_DETECTION_OPTIMIZE 0x31
#define REG_DETECTION_THRESHOLD 0x37
#define REG_SYNC_WORD 0x39
#define REG_DIO_MAPPING_1 0x40
#define REG_VERSION 0x42
#define MODE_LONG_RANGE_MODE 0x80
#define MODE_SLEEP 0x00
#define MODE_STDBY 0x01
#define MODE_TX 0x03
#define MODE_RX_CONTINUOUS 0x05
#define MODE_RX_SINGLE 0x06
#define PA_BOOST 0x80
#define IRQ_TX_DONE_MASK 0x08
#define IRQ_PAYLOAD_CRC_ERROR_MASK 0x20
#define IRQ_RX_DONE_MASK 0x40
#define PA_OUTPUT_RFO_PIN 0
#define PA_OUTPUT_PA_BOOST_PIN 1
#define TIMEOUT_RESET 100

esp_err_t lora_write_reg(uint8_t reg, uint8_t val)
{
  uint8_t out[2] = {0x80 | reg, val};
  uint8_t in[2];

  spi_transaction_t t = {
      .flags = 0,
      .length = 8 * sizeof(out),
      .tx_buffer = out,
      .rx_buffer = in};

  gpio_set_level(CONFIG_CS_GPIO, 0);
  esp_err_t ret = spi_device_transmit(__spi, &t);
  gpio_set_level(CONFIG_CS_GPIO, 1);
  return ret;
}

esp_err_t lora_read_reg(uint8_t reg, uint8_t *aInVal)
{
  uint8_t out[2] = {reg, 0xff};
  uint8_t in[2];

  spi_transaction_t t = {
      .flags = 0,
      .length = 8 * sizeof(out),
      .tx_buffer = out,
      .rx_buffer = in};

  gpio_set_level(CONFIG_CS_GPIO, 0);
  esp_err_t ret = spi_device_transmit(__spi, &t);
  gpio_set_level(CONFIG_CS_GPIO, 1);
  *aInVal = in[1];
  return ret;
}

void lora_reset(void)
{
  gpio_set_level(CONFIG_RST_GPIO, 0);
  vTaskDelay(pdMS_TO_TICKS(1));
  gpio_set_level(CONFIG_RST_GPIO, 1);
  vTaskDelay(pdMS_TO_TICKS(10));
}

esp_err_t lora_set_bandwidth(long sbw)
{
  uint8_t bw;

  if (sbw <= 7.8E3)
    bw = 0;
  else if (sbw <= 10.4E3)
    bw = 1;
  else if (sbw <= 15.6E3)
    bw = 2;
  else if (sbw <= 20.8E3)
    bw = 3;
  else if (sbw <= 31.25E3)
    bw = 4;
  else if (sbw <= 41.7E3)
    bw = 5;
  else if (sbw <= 62.5E3)
    bw = 6;
  else if (sbw <= 125E3)
    bw = 7;
  else if (sbw <= 250E3)
    bw = 8;
  else
    bw = 9;

  esp_err_t ret;
  uint8_t reg;
  ret = lora_read_reg(REG_MODEM_CONFIG_1, &reg);
  if (ret != ESP_OK)
    return ret;
  return lora_write_reg(REG_MODEM_CONFIG_1, (reg & 0x0f) | (bw << 4));
}

esp_err_t lora_send_packet(uint8_t *buf, uint8_t size)
{
  uint8_t reg;
  esp_err_t ret;
  /*
    * Transfer data to radio.
    */
  ret = lora_idle();
  if (ret != ESP_OK)
    return ret;
  ret = lora_write_reg(REG_FIFO_ADDR_PTR, 0);
  if (ret != ESP_OK)
    return ret;

  for (int i = 0; i < size; i++)
  {
    ret = lora_write_reg(REG_FIFO, *buf++);
    if (ret != ESP_OK)
      return ret;
  }

  ret = lora_write_reg(REG_PAYLOAD_LENGTH, size);
  if (ret != ESP_OK)
    return ret;

  /*
    * Start transmission and wait for conclusion.
    */
  ret = lora_write_reg(REG_OP_MODE, MODE_LONG_RANGE_MODE | MODE_TX);
  if (ret != ESP_OK)
    return ret;
  ret = lora_read_reg(REG_IRQ_FLAGS, &reg);
  if (ret != ESP_OK)
    return ret;
  while ((reg & IRQ_TX_DONE_MASK) == 0)
  {
    ret = lora_read_reg(REG_IRQ_FLAGS, &reg);
    if (ret != ESP_OK)
      return ret;
    vTaskDelay(2);
  };

  return lora_write_reg(REG_IRQ_FLAGS, IRQ_TX_DONE_MASK);
}

esp_err_t lora_receive_packet(uint8_t *buf, uint8_t size, uint8_t *BytesRead)
{
  esp_err_t ret;
  uint8_t len = 0;
  uint8_t reg;

  /*
    * Check interrupts.
    */
  uint8_t irq;
  ret = lora_read_reg(REG_IRQ_FLAGS, &irq);
  if (ret != ESP_OK)
    return ret;
  ret = lora_write_reg(REG_IRQ_FLAGS, irq);
  if (ret != ESP_OK)
    return ret;
  if ((irq & IRQ_RX_DONE_MASK) == 0) // nichts zu lesen
  {
    *BytesRead = 0;
    return ESP_OK;
  }
  if (irq & IRQ_PAYLOAD_CRC_ERROR_MASK)
    return ESP_ERR_INVALID_CRC;

  /*
    * Find packet size.
    */
  ret = lora_read_reg(__implicit ? REG_PAYLOAD_LENGTH : REG_RX_NB_BYTES, &len);
  if (ret != ESP_OK)
    return ret;

  /*
    * Transfer data from radio.
    */
  ret = lora_idle();
  if (ret != ESP_OK)
    return ret;
  ret = lora_read_reg(REG_FIFO_RX_CURRENT_ADDR, &reg);
  if (ret != ESP_OK)
    return ret;
  ret = lora_write_reg(REG_FIFO_ADDR_PTR, reg);
  if (ret != ESP_OK)
    return ret;
  if (len > size)
    len = size;
  for (int i = 0; i < len; i++)
  {
    ret = lora_read_reg(REG_FIFO, &reg);
    if (ret != ESP_OK)
      return ret;
    *buf++ = reg;
  }

  *BytesRead = len;
  return ret;
}
